[gd_scene load_steps=21 format=3 uid="uid://b8wlud0q4nruq"]

[ext_resource type="Script" path="res://content/characters/boss.gd" id="1_pc6gb"]
[ext_resource type="Texture2D" uid="uid://c3npn56vwuvme" path="res://content/graphics/characters/gremlins.png" id="2_vl14e"]
[ext_resource type="AudioStream" uid="uid://ckrt16ekwqhi3" path="res://content/audio/enemy_pain.wav" id="3_h4lor"]
[ext_resource type="AudioStream" uid="uid://csasvoqfb2pdc" path="res://content/audio/enemy_death.wav" id="4_5g0fn"]
[ext_resource type="Texture2D" uid="uid://bbkrxslju54uk" path="res://content/graphics/particle.png" id="5_ud257"]

[sub_resource type="AtlasTexture" id="AtlasTexture_70xn0"]
atlas = ExtResource("2_vl14e")
region = Rect2(0, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_glqt2"]
atlas = ExtResource("2_vl14e")
region = Rect2(0, 90, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_r45uu"]
atlas = ExtResource("2_vl14e")
region = Rect2(30, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4e10"]
atlas = ExtResource("2_vl14e")
region = Rect2(60, 90, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrlol"]
atlas = ExtResource("2_vl14e")
region = Rect2(60, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_icrgx"]
atlas = ExtResource("2_vl14e")
region = Rect2(30, 90, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_da4bo"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_70xn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glqt2")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r45uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4e10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrlol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icrgx")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68vui"]
size = Vector2(138, 128.75)

[sub_resource type="BlackboardPlan" id="BlackboardPlan_84k4p"]

[sub_resource type="Animation" id="Animation_uqn3x"]
resource_name = "pain"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v065v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4o7v5"]
_data = {
"RESET": SubResource("Animation_v065v"),
"pain": SubResource("Animation_uqn3x")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_5umw2"]
atlas = ExtResource("5_ud257")
region = Rect2(10, 0, 10, 10)

[sub_resource type="Gradient" id="Gradient_acbrw"]
colors = PackedColorArray(0, 1, 0, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oq3me"]
size = Vector2(138, 130)

[node name="Boss" type="CharacterBody2D" groups=["Enemy", "Saveable"]]
collision_layer = 4
script = ExtResource("1_pc6gb")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.96046e-08, -75)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_da4bo")
animation = &"walk"
autoplay = "idle"
frame = 1
frame_progress = 0.272154

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -64.625)
shape = SubResource("RectangleShape2D_68vui")

[node name="PainSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h4lor")
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5g0fn")
bus = &"SFX"

[node name="BTPlayer" type="BTPlayer" parent="."]
blackboard_plan = SubResource("BlackboardPlan_84k4p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4o7v5")
}

[node name="BloodParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -73)
emitting = false
amount = 30
lifetime = 0.2
one_shot = true
texture = SubResource("AtlasTexture_5umw2")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
linear_accel_min = 0.05
linear_accel_max = 0.05
damping_min = 0.5
damping_max = 0.5
color_ramp = SubResource("Gradient_acbrw")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -65)
shape = SubResource("RectangleShape2D_oq3me")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
